--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
   <title>Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
- 
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -34,7 +34,12 @@
         sidebarState = 'visible';
       }
 
-      // Set initial collapse states for acordeons V
+      // Si no hay un estado previamente guardado, ocultar la barra lateral en pantallas pequeñas
+      if (!sidebarState && window.innerWidth <= 567) {
+        sidebarState = 'hidden';
+      }
+
+      // Set initial collapse states for acordeons
       for (const collapseId in collapseStates) {
         if (Object.prototype.hasOwnProperty.call(collapseStates, collapseId)) {
           const collapse = document.getElementById(collapseId);
@@ -93,7 +98,7 @@
 
   </script>
 
-<!--
+  <!--
     <script>
   document.addEventListener('DOMContentLoaded', function () {
   const sidebar = document.getElementById('sidebar');
@@ -170,7 +175,7 @@
     <div class="row">
 
       <!-- Sidebar -->
-      <div class="col-3 bg-light" id="sidebar">
+      <div class="col-2 bg-light" id="sidebar">
         {% include 'inc/sidebar.html' %}
       </div>
       <!-- /Sidebar -->
@@ -178,7 +183,7 @@
 
       <!-- Main Content -->
       <div class="col" id="main-content">
-        <div class="p-3">
+        <div class="p-0">
           {% include 'inc/breadcrumbs.html' %}
 
           <div id="container">
