--- a/app/templates/inc/sidebar.html
+++ b/app/templates/inc/sidebar.html
@@ -1,7 +1,7 @@
-<div class="p-3">
+<div class="p-1">
   <nav class="accordion" id="sidebar-menu">
     {% if current_user.is_authenticated %}
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingProfile">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseProfile" aria-expanded="false" aria-controls="collapseProfile">
@@ -26,7 +26,7 @@
     </div>
     {% endif %}
     {% if current_user.is_authenticated and current_user.role == 'usuario' %}
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingMisSitios">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseMisSitios" aria-expanded="false" aria-controls="collapseMisSitios">
@@ -48,7 +48,7 @@
     </div>
     {% endif %}
     {% if is_admin %}
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingAdmin">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseAdmin" aria-expanded="false" aria-controls="collapseAdmin">
@@ -71,11 +71,11 @@
       </div>
     </div>
     {% endif %}
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingItem1">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseItem1" aria-expanded="false" aria-controls="collapseItem1">
-          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 2</span>
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 1</span>
         </button>
       </h2>
       <div id="collapseItem1" class="accordion-collapse collapse" aria-labelledby="headingItem1"
@@ -88,7 +88,7 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingItem2">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseItem2" aria-expanded="false" aria-controls="collapseItem2">
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingItem3">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseItem3" aria-expanded="false" aria-controls="collapseItem3">
@@ -122,7 +122,7 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingItem4">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseItem4" aria-expanded="false" aria-controls="collapseItem4">
@@ -139,7 +139,7 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item p-2">
       <h2 class="accordion-header" id="headingItem5">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapseItem5" aria-expanded="false" aria-controls="collapseItem5">
