--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -9,9 +9,10 @@
         alt="Logo" height="30" width="130"></a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
+        <!--
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Announces</a>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
@@ -86,11 +87,15 @@
 
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">Ayuda</a>
+        </li> -->
+        {% if current_user.is_authenticated %}
+        <li class="nav-item dropdown">
+          <a class="nav-link btn btn-outline-secondary ms-1" href="{{ url_for('register') }}"><i class="fa-solid fa-key"></i>
+            Hazte PRO</a>
         </li>
         <li class="nav-item dropdown">
-          {% if current_user.is_authenticated %}
           <a class="nav-link dropdown-toggle btn btn-outline-secondary ms-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Hi {{ current_user.username }}</span>
@@ -120,11 +125,15 @@
             <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
             <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
           </ul>
-          {% else %}
-            <a class="btn btn-outline-secondary ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
-              Login</a>
-          {%endif%}
         </li>
+        {% else %}
+        <li>
+            <a class="nav-link btn btn-outline-secondary ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
+              Login</a>
+            </li><li>
+              <a class="nav-link btn btn-outline-secondary ms-1" href="{{ url_for('register') }}"><i class="fa-solid fa-key"></i>
+                Registrarse</a></li>
+          {%endif%}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
