--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -154,12 +154,12 @@
             <div class="dropdown-menu-columns">
               <div class="column">
                 <h6 class="dropdown-header">Accessibility ♿</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-universal-access"></i> WCAG-AA/AAA</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-spell-check"></i> Ortografia</a>
+                <a class="dropdown-item" href="/tools/accesibility/wcag"><i class="fas fa-universal-access"></i> WCAG-AA/AAA</a>
+                <a class="dropdown-item" href="/tools/accesibility/ortografia"><i class="fas fa-spell-check"></i> Ortografia</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-tachometer-alt"></i> Velocidad (Speed)</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-vials"></i> Core Web Vitals</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-mobile-alt"></i> Responsive</a>
-              </div>
+              </div> 
               <div class="column">
                 <h6 class="dropdown-header">Image Optimization 🖼️</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-image"></i> Images</a>
@@ -171,9 +171,9 @@
               </div>
               <div class="column">
                 <h6 class="dropdown-header">Usability 🧭</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-star"></i> Favicon Missing</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-bolt"></i> Flash Used</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-times"></i> X Card Tag Missing</a>
+                <a class="dropdown-item" href="/tools/usability/missing-favicon"><i class="fas fa-star"></i> Favicon Missing</a>
+                <a class="dropdown-item" href="/tools/usability/flash-used"><i class="fas fa-bolt"></i> Flash Used</a>
+                <a class="dropdown-item" href="/tools/usability/x-card-missing'"><i class="fas fa-times"></i> X Card Tag Missing</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Google Search Display</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-tasks"></i> Content Optimization</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-random"></i> Redirection Management</a>
